; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_subtrans.c_SUBTRANSShmemInit.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_subtrans.c_SUBTRANSShmemInit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@SubTransPagePrecedes = common dso_local global i32 0, align 4
@SubTransCtl = common dso_local global %struct.TYPE_3__* null, align 8
@.str = private unnamed_addr constant [9 x i8] c"subtrans\00", align 1
@NUM_SUBTRANS_BUFFERS = common dso_local global i32 0, align 4
@SubtransControlLock = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [12 x i8] c"pg_subtrans\00", align 1
@LWTRANCHE_SUBTRANS_BUFFERS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SUBTRANSShmemInit() #0 {
  %1 = load i32, i32* @SubTransPagePrecedes, align 4
  %2 = load %struct.TYPE_3__*, %struct.TYPE_3__** @SubTransCtl, align 8
  %3 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %2, i32 0, i32 1
  store i32 %1, i32* %3, align 4
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** @SubTransCtl, align 8
  %5 = load i32, i32* @NUM_SUBTRANS_BUFFERS, align 4
  %6 = load i32, i32* @SubtransControlLock, align 4
  %7 = load i32, i32* @LWTRANCHE_SUBTRANS_BUFFERS, align 4
  %8 = call i32 @SimpleLruInit(%struct.TYPE_3__* %4, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 %5, i32 0, i32 %6, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0), i32 %7)
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** @SubTransCtl, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  store i32 0, i32* %10, align 4
  ret void
}

declare dso_local i32 @SimpleLruInit(%struct.TYPE_3__*, i8*, i32, i32, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
